windows overflow fix

--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ body {
   -ms-flex-positive: 1;
   flex-grow: 1;
   max-height: 91vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .message {
